(library
 (name yarec)
 (modules Lexer Parser Exceptions Flags Location Types LexingII Nmap_lexer))

(executables
 (names yarec_stdin main mainAll)
 (libraries yarec)
 (modules Yarec_stdin Main MainAll))

(ocamllex lexer)
(ocamllex nmap_lexer)

(menhir
 (modules parser)
 (flags --explain))
;; --trace
